extends Node

func play_wind_sound():
	%wind_sound.play()
	

func stop_wind_sound():
	%wind_sound.stop()
	

func play_hurt01_sound():
	%hurt01_sound.play()
	

func play_beach_sound():
	%beach_sound.play()
	


func stop_beach_sound():
	%beach_sound.stop()
	

func play_descover_sound():
	%descover_sound.play()
	
